tests/compile_fail/state/no_superstate_attr.stderr
error: no `moku::superstate` attribute defined for this `moku::State`
  --> tests/compile_fail/state/no_superstate_attr.rs:17:5
   |
17 |     impl State<BlinkyState> for Bottom {
   |     ^^^^
